# SimpleFileWatcher

./: .gitignore  CMakeLists.txt  SimpleDemo.cpp
include/FileWatcher/: FileWatcher.h
source/: FileWatcher.cpp  FileWatcherOSX.cpp
